test/good/arrays/concat01.px

a = [1] + [2, 3]
for x in a do
    print x
