test/bad/loops/while02.px

while 1, 2, 3 do
    skip
